# chatter-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: pyproject.toml
app/app/api/api_v1/endpoints/: users.py
app/app/core/: config.py
chatter/: main.py
chatter/api/api_v1/: api.py
chatter/api/api_v1/endpoints/: chat.py  course.py  message.py  users.py
chatter/core/: config.py  http_clients.py  security.py
chatter/models/: __init__.py  chats.py  courses.py  messages.py  users.py
chatter/models/migrations/models/: 1_20230320130747_None.py
chatter/tests/: conftest.py
chatter/tests/api/api_v1/: test_chats.py  test_items.py  test_users.py
chatter/tests/crud/: test_item.py  test_user.py
routes/: chat.py  course.py
