[tool.poetry]
name = "chatter-api"
version = "0.1.0"
description = ""
authors = ["yelinz <yelin.zhang@adfinis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
python-multipart = "^0.0.6"
tortoise-orm = {extras = ["asyncpg", "accel"], version = "^0.19.3"}
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
